<resources>
    <string name="app_name">EmployApplication</string>

    <!-- Splash -->
    <string name="enter_app">Start now</string>

    <!-- 登录页面 -->
    <string name="phone_number">Phone Number</string>
    <string name="enter_security_code">Security Code Please</string>
    <string name="send_security_code">Send Security Code</string>
    <string name="login_now">Login</string>
    <!-- 登录错误提示 -->
    <string name="login_error_tip_1">Security Code Error</string>
    <string name="login_error_tip_2">Phone Number Empty</string>
    <string name="login_error_tip_3">Phone Number Illegal</string>
    <string name="login_error_tip_4">Network Error</string>

    <!-- navigation view -->
    <string name="title_job">Job</string>
    <string name="title_message">Message</string>
    <string name="title_me">Me</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- JobFragment -->
    <string name="job_select_condition_where">Address</string>
    <string name="job_select_condition_apartment">Apartment</string>
    <string name="job_select_condition_pay">Pay</string>

    <!-- ChatActivity -->
    <string name="action_send">Send</string>
    <string name="action_common_language">Common</string>
    <string name="action_start_communicate">Start Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="conversion_search">Search</string>

    <string name="work_address_area">Area</string>
    <string name="work_address_comp">Company</string>
    <string name="work_detail_requirement">Detail Requirement</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
